--- a/exerc/arvore_dom.html
+++ b/exerc/arvore_dom.html
@@ -3,7 +3,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Pagina Inicial</title>
+    <title>Arvore Dom</title>
 </head>
 <body>
     <nav>
@@ -13,9 +13,13 @@
             <li><a href="tabela.html">Tabelas</a></li> 
             <li><a href="arvore_dom.html">Árvore Dom</a></li>                              
         </ul>
-    </nav>    
+    </nav> 
     <main>
-
+        <figure>
+            <a href="https://tableless.com.br/entendendo-o-dom-document-object-model/" target="blank">
+            <img src="img/ARVOREDOM.png" alt="Arvore Dom">
+            </a>
+        </figure>
     </main>
 </body>
 </html>
