--- a/exerc/formulario.html
+++ b/exerc/formulario.html
@@ -3,8 +3,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" type="text/css" href="css/basico.css">
-    <title>Pagina Incial</title>
+    <title>Formulario</title>
 </head>
 <body>
     <header>
@@ -14,7 +13,8 @@
         <ul>
             <li><a href="index.html">Inicio</a></li>
             <li><a href="formulario.html">Formulario</a></li>
-            <li><a href="tabela.html">Tabelas</a></li>            
+            <li><a href="tabela.html">Tabelas</a></li>      
+            <li><a href="arvore_dom.html">Árvore Dom</a></li>            
         </ul>
     </nav>
     <main>
