--- a/exerc/tabela.html
+++ b/exerc/tabela.html
@@ -3,6 +3,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" type="text/css" href="css/main.css">
     <title>Tabelas</title>
 </head>
 <body>
@@ -12,35 +13,45 @@
         <ul>
             <li><a href="index.html">Inicio</a></li>
             <li><a href="formulario.html">Formulario</a></li> 
-            <li><a href="tabela.html">Tabelas</a></li>                      
+            <li><a href="tabela.html">Tabelas</a></li>           
+            <li><a href="arvore_dom.html">Árvore Dom</a></li>                 
         </ul>
     </nav> 
     <main>        
-        <h1>Tabelas</h1>
+        <h1>Tabela</h1>
         <hr />
         <table>
-            <thead>
-                <tr>
-                    <th>RA</th>
-                    <th>Nome</th>
-                    <th>Sobrenome</th>
-                </tr>
-            </thead>
-            <tfoot>
-                <tr>
-                    <td colspan="3">
-                        2019 All Rigths Reserved
-                    </td>
-                </tr>
-            </tfoot>
-            <tbody>
-                <tr>
-                    <td>319113692</td>
-                    <td>Gabriel</td>
-                    <td>Teixeira</td>
-                </tr>
-            </tbody>
-        </table>
+            <tr id="minhatabela">
+                <td>HEADER</td>
+                <td>HEADER</td>
+                <td>HEADER</td>
+                <td>HEADER</td>
+            </tr>
+            <tr>
+                <td>item </td>
+                <td>item </td>
+                <td>item </td>
+                <td>item </td>
+            </tr>
+            <tr>
+                <td>item </td>
+                <td>item </td>
+                <td>item </td>
+                <td>item </td>
+            </tr>
+            <tr>
+                <td>item </td>
+                <td>item </td>
+                <td>item </td>
+                <td>item </td>
+            </tr>
+            <tr>
+                <td>item </td>
+                <td>item </td>
+                <td>item </td>
+                <td>item </td>
+            </tr>
+        </table>       
     </main>
     <footer>
 
